--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@babel/preset-env": "^7.3.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "lodash": "^4.17.11",
     "mongoose": "^5.4.9",
-    "nodemon": "^1.18.9"
+    "nodemon": "^1.18.9",
+    "validator": "^10.11.0"
   }
 }
