--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon app.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "nyc-run": "nyc report"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +20,11 @@
     "lodash": "^4.17.11",
     "mongoose": "^5.4.9",
     "nodemon": "^1.18.9",
+    "nyc": "^13.1.0",
     "validator": "^10.11.0"
+  },
+  "devDependencies": {
+    "coveralls": "^3.0.2",
+    "jest": "^24.0.0"
   }
 }
